tests/error/tracing_errors/array_change_len_inout.py
from guppylang.decorator import guppy
from guppylang.std.builtins import array


@guppy.comptime
def test(xs: array[int, 10]) -> None:
    xs.pop()


guppy.compile(test)
